# haskell-servant-api

./: README.md  college-basketball-api.cabal  gonzaga table.txt  gonzaga.csv  stack.yaml
src/: API.hs  Database.hs  Main.hs  SSMImports.hs  Schema.hs  SecretsManager.hs
