name:                college-basketball-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/college-basketball-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable college-basketball-api
  hs-source-dirs:      src
  extra-lib-dirs:      lib
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , aeson
                       , amazonka
                       , amazonka-ssm
                       , aws-easy
                       , bytestring
                       , directory
                       , filepath
                       , lens
                       , monad-logger
                       , mtl
                       , persistent
                       , persistent-postgresql
                       , persistent-template
                       , resourcet
                       , text
                       , servant
                       , servant-client
                       , servant-server 
                       , transformers
                       , warp
other-modules:         SSMImports
